<resources>
    <string name="app_name">App Lock</string>
    <string name="dialog_tip"> Your Android version is greater than or equal Android 5.0, App Lock need to get the \"Application Usage\" permission</string>
    <string name="go_to_give_permission">Permit Permission</string>
    <string name="lock_need_to_unlock_wrong">The pattern do not match. Please try again.</string>
    <string name="lock_recording_intro_header">Set the App\'s unlock pattern</string>
    <string name="search_for">Search For&#8230;</string>
    <string name="search_applications">Search Apps&#8230;</string>
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lock_recording_incorrect_too_short">You should connect at least 4 points.</string>
    <string name="lock_pattern_entered_header">Record pattern</string>
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
    <string name="lock_pattern_confirmed_header">Confirmed Pattern</string>
    <string name="_1_minute">1 minute</string>
    <string name="apps">Apps</string>
    <string name="welcome_to_the_app_lock">Welcome to the Eway</string>

    <string name="create_pattern">Create pattern</string>
    <string name="please_draw_your_pattern">Please draw your pattern</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="search_application">Search Apps</string>
    <string name="settings">Settings</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="lock_immediately_after_locking_the_screen">Lock app immediately locking the phone</string>
    <string name="open">Open</string>
    <string name="change_the_password">Change the pattern</string>
    <string name="show_pattern">Show pattern</string>
    <string name="hide_pattern">Hide pattern</string>
    <string name="about_me">About Me</string>
    <string name="warning">Warning</string>
    <string name="take_a_photo">Intruder selfie</string>
    <string name="accessibility_service_description">This permission is only used for locking the apps</string>
    <string name="accessibility_service_name">App lock</string>
    <string name="lock_type">Lock Type</string>
    <string name="pattern_is_required">Pattern is required when the Locked Apps are opened</string>
    <string name="pattern_is_not_required">Pattern is not required when the Locked Apps opened</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="vibrate">Vibration</string>
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
    <string name="password_error_count">The pattern does not match. Please try again.</string>
    <string name="reset">Reset</string>
    <string-array name="lock_time_array">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>Immediately </item>
    </string-array>

    <string name="lockscreen_access_pattern_cell_added">Added cell</string>
    <string name="lockscreen_access_pattern_start">Draw unlock pattern</string>
    <string name="lockscreen_access_pattern_detected">Pattern has been saved </string>
    <string name="lockscreen_access_pattern_cleared">Pattern has been deleted </string>
    <string name="login">Login</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="text_locked">Locked</string>
    <string name="text_unlocked">Unlocked</string>
</resources>