<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/appBarColor">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_2"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_toEndOf="@+id/btn_back"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CACACA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/backColor"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="Lock Apps"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/checkbox_app_lock_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/backColor"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/lock_immediately_after_locking_the_screen"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/checkbox_lock_screen_switch_on_phone_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/backColor"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/intruder_selfie"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/checkbox_intruder_selfie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/backColor"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/hide_pattern"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/checkbox_show_hide_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/backColor"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                android:text="@string/vibrate"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/checkbox_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lock_when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backColor"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:text="@string/lock_settings"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/lock_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="After locking the screen"
                android:textColor="@color/gray"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_change_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backColor"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/change_the_password"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_next"
                app:tint="@color/gray" />

        </LinearLayout>

    </LinearLayout>

    <!--

        <RelativeLayout
            android:id="@+id/lock_type"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_white_clicked"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/lock_type"
                android:textColor="#2c2c2c"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/lock_type_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/arrow_more"
                android:drawablePadding="15dp"
                tool:text="Usage stats"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#DEDEDE"
                android:textColor="#2c2c2c"/>
        </RelativeLayout>

    -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#DEDEDE" />

    <TextView
        android:id="@+id/about_me"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_white_clicked"
        android:drawableRight="@drawable/arrow_more"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/about_me"
        android:textColor="#2c2c2c"
        android:textSize="14sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/line_color" />
</LinearLayout>