<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_40sdp">

        <TextView
            android:id="@+id/txtapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/user"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_below="@+id/txtapp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:src="@drawable/user"
            app:tint="@color/appColor" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLogin"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/user_id"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeColor="@color/appColor"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userId"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeColor="@color/appColor"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/appColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>